--- a/client/index.html
+++ b/client/index.html
@@ -32,7 +32,7 @@
         </ul>
 
       </nav>
-      
+
     </header>
 
     <main ui-view></main>
@@ -45,6 +45,7 @@
     <script src="js/app.js"></script>
     <script src="js/services/lb-services.js"></script>
     <script src="js/controllers/auth.js"></script>
+    <script src="js/controllers/map.js"></script>
     <script src="js/controllers/order.js"></script>
     <script src="js/services/auth.js"></script>
   </body>
