--- a/client/index.html
+++ b/client/index.html
@@ -17,12 +17,12 @@
           <li ng-hide="currentUser">
             <a ui-sref="sign-up" ui-sref-active="active">Sign up</a>
           </li>
-          <li ng-show="currentUser">
+<!--           <li ng-show="currentUser">
             <a ui-sref="my-orders" ui-sref-active="active">My Orders</a>
           </li>
           <li ng-show="currentUser">
             <a ui-sref="add-order" ui-sref-active="active">Add Order</a>
-          </li>
+          </li> -->
           <li ng-hide="currentUser">
             <a ui-sref="login" ui-sref-active="active">Log in</a>
           </li>
@@ -36,17 +36,20 @@
     </header>
 
     <main ui-view></main>
+    <script src="https://cdn.socket.io/socket.io-1.3.5.js"></script>
     <script src='//maps.googleapis.com/maps/api/js?sensor=false'></script>
     <script src="vendor/angular.js"></script>
     <script src="vendor/angular-resource.js"></script>
     <script src="vendor/angular-google-maps-2.1.1.js"></script>
     <script src="vendor/angular-ui-router.js"></script>
     <script src="vendor/lodash.min.js"></script>
+    <script src="vendor/socket.min.js"></script>
     <script src="js/app.js"></script>
     <script src="js/services/lb-services.js"></script>
     <script src="js/controllers/auth.js"></script>
     <script src="js/controllers/map.js"></script>
     <script src="js/controllers/order.js"></script>
+    <script src="js/controllers/driver.js"></script>
     <script src="js/services/auth.js"></script>
   </body>
 </html>
